--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                    <a href=""><img src="assets/asset 125.svg" alt=""></a>
                 </div>
                 </div>
-                
+                <p>Hello</p>
            </main>
 </body>
 </html>
